--- a/App/readme/index.html
+++ b/App/readme/index.html
@@ -32,7 +32,7 @@
         </main>
     </body>
     <script>
-        const rawUrl = 'https://raw.githubusercontent.com/NeAdvokats/D4C.RU/refs/heads/main/README.md';
+        const rawUrl = 'https://raw.githubusercontent.com/NeAdvokats/D4C.RU/refs/heads/main/README-TAB';
         
         fetch(rawUrl)
             .then(response => {
